menu current class

--- a/pages/about.html
+++ b/pages/about.html
@@ -49,8 +49,8 @@
     <!-- Menu -->
         <nav class="menu"> 
             <ul>
-                <li><a href="about.html">About me</a></li>
-                <li class="subMenu">Know-how
+                <li><a href="about.html" class="current">About me</a></li>
+                <li class="subMenu"><a>Know-how</a>
                     <ul>
                         <li><a href="front-end.html">Front-End</a></li>
                         <li><a href="journalism.html">Journalism</a></li>
@@ -152,17 +152,7 @@
 
 <script type="text/javascript">
     
-//$(document).ready(function (){
-//
-//    function hideScroll() {
-//        if ($(window).scrollTop() > 500){
-//            $('.arrow-wrapper').hide('5000');
-//        } else {
-//            $('.arrow-wrapper').show();
-//        }
-//    }
-//    hideScroll();
-//});
+
     
 
 
