submenu touch test

--- a/pages/about.html
+++ b/pages/about.html
@@ -51,7 +51,7 @@
             <ul>
                 <li><a href="about.html" class="current">About me</a></li>
                 <li class="subMenu"><a>Know-how</a>
-                    <ul>
+                    <ul id="subMenuContent">
                         <li><a href="front-end.html">Front-End</a></li>
                         <li><a href="journalism.html">Journalism</a></li>
                         <li><a href="branding.html">Branding</a></li>
