it works finally

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<nav class="menu"> 
 		    <ul>
 				<li><a href="pages/about.html">About me</a></li>
-				<li class="subMenu">Know-how
-				    <ul>
+				<li href="#" class="subMenu"><a>Know-how</a>
+				    <ul class="touchDropDown">
                         <li><a href="pages/front-end.html">Front-End</a></li>
                         <li><a href="pages/journalism.html">Journalism</a></li>
                         <li><a href="pages/branding.html">Branding</a></li>
