--- a/index.html
+++ b/index.html
@@ -147,24 +147,24 @@
 
 	<footer>
         <div class="container-lg">          
-            <div id="logo-bottom"><img src="../assets/logo-white.svg" alt="Logo" />
+            <div id="logo-bottom"><img src="assets/logo-white.svg" alt="Logo" />
             </div>
 
             <p><en>Paulo Pamplona<br />Front-End Web Developer</en></p>
             <div class="social">
                 <div class="linkedin">
             <!--    E.g.: LinkedIn Icon made by Freepik from www.flaticon.com -->
-                    <a href="https://www.linkedin.com/in/paulopamplona" target="_blank" ><img src="../assets/linkedin.svg" alt="LinkedIn" /></a>
+                    <a href="https://www.linkedin.com/in/paulopamplona" target="_blank" ><img src="assets/linkedin.svg" alt="LinkedIn" /></a>
                 </div>
 
                 <div class="github">
             <!--    E.g.: GitHub Icon made by Dave Gandy from www.flaticon.com -->
-                    <a href="https://github.com/pamplonapaulo" target="_blank" ><img src="../assets/github.svg" alt="GitHub" /></a>
+                    <a href="https://github.com/pamplonapaulo" target="_blank" ><img src="assets/github.svg" alt="GitHub" /></a>
                 </div>
 
                 <div class="codepen">
             <!--    E.g.: Codepen Icon made by Icons8 from https://icons8.com --> 
-                    <a href="https://codepen.io/pamplonapaulo/pens/public/" target="_blank" ><img src="../assets/CodePen.svg" alt="CodePen" /></a>
+                    <a href="https://codepen.io/pamplonapaulo/pens/public/" target="_blank" ><img src="assets/CodePen.svg" alt="CodePen" /></a>
                 </div>
             </div>
 
