index content review

--- a/index.html
+++ b/index.html
@@ -136,12 +136,11 @@
    
    <main class="main-content container-lg">
    
-		<p>I'm a former public relations just certified in Front-End Web Development in San Diego Continuing Education, California.</p>
-		<p>I build websites using technologies like HTML, CSS, and JavaScript and jQuery. My next goal is start to include portions of Back-End technologies, such as Phyton and PHP, specially in order to make more complex and customized funtionalities behind Content Management Systems like WordPress. 
+		<p>Hi. My name is Paulo Pamplona and you are in my portfolio website. I'm a Brazilian-Portuguese citizen starting a new career and just certified in Front-End Web Development at San Diego Continuing Education, in California.</p>
+		<p>I'm building websites using mostly technologies like HTML5, CSS3, SCSS, JavaScript, and jQuery. My next goal is start to include portions of Back-End technologies, such as Phyton and PHP, specially in order to make more complex and customized funtionalities behind Content Management Systems like WordPress. 
 		</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet harum quam ullam cumque. Neque fuga earum repellat laudantium, delectus tempore sunt eaque eos pariatur mollitia, aliquid amet voluptates consectetur aspernatur!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur saepe reiciendis dolorem, labore corporis, ipsum mollitia voluptas similique. Cumque ea perspiciatis distinctio reprehenderit corrupti esse nihil reiciendis consectetur natus quod.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad delectus voluptate, natus eveniet nam laborum obcaecati voluptatibus non asperiores possimus. Velit ex nisi voluptatem, necessitatibus nesciunt consectetur nam sit rerum.</p>
+		<p>This website is almost done. I invite you to explore all the pages but "Know-how/Journalism", "Know-how/Branding", and "Contact". I hope you will like the way it looks and have some fun with the humor in my content.</p>
+       <p>Thank you!</p>
 
 	</main><!-- .main-content -->
 
