--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="full-width">
                     <h2>Welcome to<br/>Paulo Pamplona's portifolio</h2>
                     <p></p>
-                    <a href="pages/portifolio.html" class="btn">See Portifolio</a>
+                    <a href="pages/portfolio.html" class="btn">See Portifolio</a>
                 </div>  <!-- .full-width -->
             </li>
     <!-- Slide 2/5 ------------>
@@ -66,8 +66,8 @@
 				<div class="half-width">
 					<h2>Front-End Web Development</h2>
 					<p></p>
-					<a href="#0" class="btn">Request For Proposal</a>
-					<a href="#0" class="btn secondary">Learn More</a>
+<!--					<a href="#0" class="btn">Request For Proposal</a>-->
+					<a href="pages/front-end.html" class="btn secondary">Learn More</a>
 				</div> <!-- .half-width -->
 
 				<div class="half-width img-container">
@@ -85,8 +85,10 @@
 				<div class="half-width">
 					<h2>Information Architecture</h2>
 					<p></p>
+<!--
 					<a href="#0" class="btn">Buy now</a>
 					<a href="#0" class="btn secondary">Learn More</a>
+-->
 				</div> <!-- .half-width -->
 				
 			</li>
@@ -98,7 +100,7 @@
 				<div class="full-width">
 					<h2>My random blog</h2>
 					<p></p>
-					<a href="#0" class="btn">Explore articles</a>
+					<a href="pages/blog.html" class="btn">Explore articles</a>
 <!--					<a href="#0" class="btn secondary">Learn More</a>-->
 				</div> <!-- .full-width -->
 			</li>
@@ -111,8 +113,10 @@
 				<div class="full-width">
 					<h2>Let's have a coffee?</h2>
 					<p></p>
+<!--
 					<a href="#0" class="btn">Call me</a>
 					<a href="#0" class="btn secondary">Email me</a>
+-->
 				</div> <!-- .full-width -->
 			</li>			
     
