--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
    <main class="main-content container-lg">
    
 		<p>Hi. My name is Paulo Pamplona and you are in my portfolio website. I'm a Brazilian-Portuguese citizen starting a new career and just certified in Front-End Web Development at San Diego Continuing Education, in California.</p>
-		<p>I'm building websites using mostly technologies like HTML5, CSS3, SCSS, JavaScript, and jQuery. My next goal is start to include portions of Back-End technologies, such as Phyton and PHP, specially in order to make more complex and customized funtionalities behind Content Management Systems like WordPress. 
+		<p>I'm building websites using mostly technologies like HTML5, CSS3, SCSS, JavaScript, and jQuery. My next goal is to start to include portions of Back-End technologies, such as Phyton and PHP, specially in order to make more complex and customized funtionalities behind Content Management Systems like WordPress. 
 		</p>
-		<p>This website is almost done. I invite you to explore all the pages but "Know-how/Journalism", "Know-how/Branding", and "Contact". I hope you will like the way it looks and have some fun with the humor in my content.</p>
+		<p>This is still a work in progress version, but the website is almost done. So if you are already here, I invite you to explore all the pages but "Know-how/Journalism", "Know-how/Branding", and "Contact". I hope you will like the way it looks and have some fun with the presence of some humor in my content.</p>
        <p>Thank you!</p>
 
 	</main><!-- .main-content -->
