--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <a href="pages/portfolio.html" class="btn">See Portifolio</a>
                 </div>  <!-- .full-width -->
             </li>
-    <!-- Slide 2/5 ------------>
+    <!-- Slide 2/5 ------ FRONT-END ------>
             <li>
 				<div class="half-width">
 					<h2>Front-End Web Development</h2>
@@ -75,7 +75,7 @@
 
 				</div> <!-- .half-width.img-container -->
 			</li>
-    <!-- Slide 3/5 ------------>
+    <!-- Slide 3/5 ------ INF ARCHITECTURE ------>
 			<li>
 				<div class="half-width img-container">
 					<img src="assets/building.png" alt="tech 2">
@@ -92,7 +92,7 @@
 				</div> <!-- .half-width -->
 				
 			</li>
-    <!-- Slide 4/5 ------------>
+    <!-- Slide 4/5 ------ BLOG ------>
             <li>
                 <div class="full-width img-container">
 					<img src="assets/blog.jpg" alt="Blog">
@@ -105,7 +105,7 @@
 				</div> <!-- .full-width -->
 			</li>
 			
-<!-- Slide 5/5 ------------>
+<!-- Slide 5/5 ------ CONTACT ------>
 			<li>
 			    <div class="full-width img-container">
 					<img src="assets/contact.jpg" alt="Blog">
