--- a/pages/branding.html
+++ b/pages/branding.html
@@ -50,7 +50,7 @@
                     <ul class="touchDropDown">
                         <li><a href="front-end.html">Front-End</a></li>
                         <li><a href="journalism.html">Journalism</a></li>
-                        <li><a>Branding</a></li>
+                        <li><a class="subCurrent">Branding</a></li>
                     </ul>
                 </li>
                 <li><a href="portfolio.html">Portfolio</a></li>
