--- a/pages/journalism.html
+++ b/pages/journalism.html
@@ -49,7 +49,7 @@
                 <li href="#" class="subMenu"><a class="current">Know-how</a>
                     <ul class="touchDropDown">
                         <li><a href="front-end.html">Front-End</a></li>
-                        <li><a>Journalism</a></li>
+                        <li><a class="subCurrent">Journalism</a></li>
                         <li><a href="branding.html">Branding</a></li>
                     </ul>
                 </li>
