--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -173,7 +173,18 @@
                    <figcaption class="captionBottom">Caption Bottom 8</figcaption>
                 </figure>
                </a>
+           </div>
+ 
+           <div class="galleryItem">
+             <a href="#">
+                <figure>
+                  <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
+                   <figcaption class="captionTop">Caption Top 9</figcaption>
+                   <figcaption class="captionBottom">Caption Bottom 9</figcaption>
+                </figure>
+               </a>
            </div>      
+              
         </section>
            
 
