--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -65,7 +65,7 @@
         <article class="headerSection">
             <div class="headerWrap">
                <div class="main-content container-lg">
-                   <h6>Portfolio coming soon</h6>
+                   <h6>Portfolio</h6>
                </div>
             </div>
         </article>
@@ -85,9 +85,9 @@
         </div>
        </a>
        
-        <h2>But in the meanwhile...</h2>
+        <h2>Coming soon.</h2>
 
-        <p>Hey, this website here is my first creation. So while I'm building stuff to some lucky friends, why don't you explore more this website? So far, this is the best way to figure out what I could make for you. I spent some time to make it with a nice look and also trying to use here most of the features that I know how to make.</p>
+        <p>This website is my first creation. So while I'm building stuff to some lucky friends, why don't you explore more this website? So far, this is the best way to figure out what I could make for you. I spent some time to make it with a nice look and also trying to use here most of the features that I know how to make.</p>
 
         <p>My goal here, while I don't get hired by you, is to publish one new website evey month. If you don't have money but has some amazing idea, contact me and let me know about your project. I might decide to include it at this portfolio.</p>
           
