aqui eh caveira

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -98,6 +98,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                   <figcaption class="captionTop">Caption Top 1</figcaption>
                   <figcaption class="captionBottom">Caption Bottom 1</figcaption>
@@ -108,6 +109,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 2</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 2</figcaption>
@@ -118,6 +120,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 3</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 3</figcaption>
@@ -128,6 +131,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 4</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 4</figcaption>
@@ -138,6 +142,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 5</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 5</figcaption>
@@ -148,6 +153,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 6</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 6</figcaption>
@@ -158,6 +164,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 7</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 7</figcaption>
@@ -168,6 +175,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 8</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 8</figcaption>
@@ -178,6 +186,7 @@
            <div class="galleryItem">
              <a href="#">
                 <figure>
+                 <div class="galleryItem-overlay"></div>
                   <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
                    <figcaption class="captionTop">Caption Top 9</figcaption>
                    <figcaption class="captionBottom">Caption Bottom 9</figcaption>
