working at contact

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -107,12 +107,12 @@
            </div>
            
            <div class="galleryItem">
-             <a href="#">
+             <a href="http://plumagecss.com/index.html" target="_blank">
                 <figure>
                  <div class="galleryItem-overlay"></div>
-                  <img src="../assets/blog-assets/appleWatch-640x640.jpg" alt="Apple Watch"/>
-                   <figcaption class="captionTop">Caption Top 2</figcaption>
-                   <figcaption class="captionBottom">Caption Bottom 2</figcaption>
+                  <img src="../assets/plumageCSS.png" alt="Apple Watch"/>
+                   <figcaption class="captionTop">Plumage CSS</figcaption>
+                   <figcaption class="captionBottom">[ Group Project ]</figcaption>
                 </figure>
                </a>
            </div>
