--- a/pages/contact.html
+++ b/pages/contact.html
@@ -99,7 +99,7 @@
             <ol>
                 <li>
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" title="Please enter your name" placeholder="Bernie Sanders" autofocus required/>*
+                    <input type="text" id="name" name="name" title="Please enter your name" placeholder="Bernie Sanders" required/>*
                 </li>
                 <li>
                     <label for="email">Email</label>
