--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Slide 1/5 ------------>
             <li class="selected">
                 <div class="full-width img-container">
-					<img src="assets/portfolio.jpg" alt="Portfolio">
+					<img src="assets/slider-large-portfolio.jpg" alt="Portfolio">
 				</div> 
                 <div class="full-width">
                     <h2>Welcome to<br/>Paulo Pamplona's portifolio</h2>
@@ -71,14 +71,14 @@
 				</div> <!-- .half-width -->
 
 				<div class="half-width img-container">
-					<img src="assets/jquery.jpg" alt="jQuery"><!-- 1200px x 800px medium and large screen only-->
+					<img src="assets/slider-large-jquery.jpg" alt="jQuery"><!-- 1200px x 800px medium and large screen only-->
 
 				</div> <!-- .half-width.img-container -->
 			</li>
     <!-- Slide 3/5 ------ INF ARCHITECTURE ------>
 			<li>
 				<div class="half-width img-container">
-					<img src="assets/building.png" alt="tech 2">
+					<img src="assets/slider-large-building.png" alt="tech 2">
 					<!-- 1200px x 800px medium and large screen only-->
 				</div> <!-- .half-width.img-container -->
 
@@ -95,7 +95,7 @@
     <!-- Slide 4/5 ------ BLOG ------>
             <li>
                 <div class="full-width img-container">
-					<img src="assets/blog.jpg" alt="Blog">
+					<img src="assets/slider-large-blog.jpg" alt="Blog">
 				</div> 
 				<div class="full-width">
 					<h2>My random blog</h2>
@@ -108,7 +108,7 @@
 <!-- Slide 5/5 ------ CONTACT ------>
 			<li>
 			    <div class="full-width img-container">
-					<img src="assets/contact.jpg" alt="Blog">
+					<img src="assets/slider-large-contact.jpg" alt="Blog">
 				</div> 
 				<div class="full-width">
 					<h2>Let's have a coffee?</h2>
