--- a/pages/front-end.html
+++ b/pages/front-end.html
@@ -61,7 +61,7 @@
 	</header>
    
     <!-- Hero Image -->
-    <section id="heroImage" style="background-image: url(../assets/front-end.jpg);">
+    <section id="heroImage" style="background-image: url(../assets/hero-front-end.jpg);">
         <article class="headerSection">
             <div class="headerWrap">
                <div class="main-content container-lg">
