--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</li>
 				<li><a href="pages/portfolio.html">Portfolio</a></li>
 				<li><a href="pages/blog.html">Blog</a></li>
-				<li><a href="pages/contact.html">Contact</a></li>
+				<li><a href="pages/contact.php">Contact</a></li>
             </ul>   
 		</nav>
 
@@ -71,7 +71,7 @@
 				</div> <!-- .half-width -->
 
 				<div class="half-width img-container">
-					<img src="assets/slider-large-jquery.jpg" alt="jQuery"><!-- 1200px x 800px medium and large screen only-->
+					<img src="assets/bkp-slider-large-jquery.jpg" alt="jQuery"><!-- 1200px x 800px medium and large screen only-->
 
 				</div> <!-- .half-width.img-container -->
 			</li>
