--- a/index.html
+++ b/index.html
@@ -172,9 +172,24 @@
    </section>  <!-- END .hero -->
    
    <main class="main-content container-lg">
+       
+        <p class="home-single-p">I'm Paulo Pamplona, a Brazilian-Portuguese web developer certified by San Diego Continuing Education, from California. My websites are built with  technologies like HTML5, CSS3, SCSS, JavaScript, jQuery, AJAX, JSON, and PHP.
+       </p>
+
+       
+   <div>
+        <div class="circle">
+            <div class="frame caricatura" style="background-image: url(../assets/content/paulo-pamplona.jpg);">&nbsp;</div>
+        </div>	
+   </div>
    
-		<p>I'm Paulo Pamplona, a Brazilian-Portuguese web developer certified by San Diego Continuing Education, from California. My websites are built with  technologies like HTML5, CSS3, SCSS, JavaScript, jQuery, AJAX, JSON, and PHP.
-		</p>
+   <div class="clear"></div>
+   
+	
+		
+		
+		
+		
 
 	</main><!-- .main-content -->
 
